--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 
+body{
+    font: 1.2rem "Arial Narrow", sans-serif;
+    color: rgb(235, 178, 105);
+    
+}
+
 
 .panel {
     border: 3px solid rgba(122, 109, 109, 0.226);
@@ -8,22 +14,53 @@
 }
 
 
-.planet-text {
-    font: 1.2rem "Arial Narrow", sans-serif;
-    color: antiquewhite;
-    text-align: center;
-}
 
-.planet-img {
-    margin: 20%;
+#solar-system{
+    display: grid;
+    grid-template-columns: repeat(10);
+    grid-template-rows: repeat(10);
 }
 
 
-
-#moon {
+#moon *{
+    width: 5%;
     font-size: small;
+    grid-column-start: 2;
+    grid-row-start: 4;
+
 }
 
+#mercury *{
+    width: 10%;
+    font-size: small;
+    position: 10%, 20%;
+}
 
+#venus *{
+    width: 12%;
+}
 
+#earth *{
+    width: 14%;
+}
+
+#sun *{
+    width: 60%;
+}
+
+#mars *{
+    width: 12%;
+}
+
+#neptune *{
+    width: 20%;
+}
+
+#saturn *{
+    width: 24%;
+}
+
+#jupiter *{
+    width: 30%;
+}
 
